# leetgpu-pytorch

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/agents/: benchmark-analyst.md  docs-writer.md  git-version-control-expert.md  learning-path-advisor.md  new-problem-scaffolder.md  pytorch-baseline-writer.md  solution-reviewer.md  test-writer.md  triton-kernel-debugger.md  triton-kernel-writer.md
00_pytorch_basics/: 01_tensors.py  02_autograd.py  03_check_gpu.py
01_leetgpu_problems/easy/01_vector_add/: README.md  solution.py
01_leetgpu_problems/easy/02_matrix_multiplication/: README.md  debug_journey_triton_matmul.md  deep_dive_accumulator_sync.md  deep_dive_kernel_launch.md  (+8 more)
agent_team/: README.md  agents.yaml
agent_team/references/: wait-and-stuck-policy.md
agent_team/scripts/: bootstrap_agents.ps1  bootstrap_agents.sh  check_run_logs.ps1  check_run_logs.sh  codex_multi_agent_preflight.ps1  codex_multi_agent_preflight.sh  init_run.ps1  init_run.sh  monitor_subagents.ps1  monitor_subagents.sh  restart_stuck_subagent.ps1  restart_stuck_subagent.sh  setup_run_worktrees.ps1  setup_run_worktrees.sh  teardown_run_worktrees.ps1  teardown_run_worktrees.sh  update_agent_memory.ps1  update_agent_memory.sh
agent_team/templates/: agent_log_template.md  agent_memory_template.md  agent_profile_template.md  codex_spawn_prompt_template.md  handoff_to_doc_template.md  memory_delta_template.md  thread_registry_template.md  worktree_registry_template.md
docs/: README.md  troubleshooting.md
docs/tutorials/: 03_gpu_acceleration.md
(+53 files in other folders)
