[project]
name = "leetgpu-pytorch"
version = "0.1.0"
description = "用于学习 PyTorch 和解决 GPU 加速计算问题的练习项目"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "torchaudio==2.6.0+cu124",
    "numpy>=1.24",
    "jupyter>=1.0",
    "matplotlib>=3.7",
]

# uv 专属配置：指定 torch 系列包从 PyTorch 官方 CUDA 源安装
# 运行 `uv sync` 时会自动读取此配置，无需手动指定 --index-url
[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
